fix(modal): fix overflow/z-index issue within modal (#852)

--- a/components/src/components/modal/_modal-core.scss
+++ b/components/src/components/modal/_modal-core.scss
@@ -160,6 +160,7 @@ $modals: (
   position: sticky;
   top: 0;
   background-color: var(--sdds-modal-bg);
+  z-index: 1;
 
   &::before {
     content: ' ';
